luarocksorg/state/OSX/x86/log/uuidx~1.0-5_err.txt
Warning: skipping dependency checks.
clib/uuid.c:126:14: error: __int128 is not supported on this target
    unsigned __int128 uuid_num=0;
             ^
clib/uuid.c:145:14: error: __int128 is not supported on this target
    unsigned __int128 uuid_num=0;
             ^
clib/uuid.c:163:14: error: __int128 is not supported on this target
    unsigned __int128 uuid_num=0;
             ^
clib/uuid.c:181:14: error: __int128 is not supported on this target
    unsigned __int128 uuid_num=0;
             ^
clib/uuid.c:198:14: error: __int128 is not supported on this target
    unsigned __int128 uuid_num=0;
             ^
clib/uuid.c:218:14: error: __int128 is not supported on this target
    unsigned __int128 uuid_num=0;
             ^
clib/uuid.c:236:14: error: __int128 is not supported on this target
    unsigned __int128 uuid_num=0;
             ^
clib/uuid.c:254:14: error: __int128 is not supported on this target
    unsigned __int128 uuid_num=0;
             ^
8 errors generated.
make: *** [clib/uuid.o] Error 1

Error: Build error: Failed building.
